# code/backend/metiche/core/module/session/types/fetch_session_by_parent_session_uuid.go
@@ -1,0 +1,28 @@
+// Code generated by nuzur go-code-gen. DO NOT EDIT.
+
+package types
+
+import (
+	main_entity "github.com/mklfarha/metiche/backend/entity/session"
+
+	"github.com/gofrs/uuid"
+	"go.uber.org/zap/zapcore"
+)
+
+type FetchSessionByParentSessionUUIDRequest struct {
+	ParentSessionUUID *uuid.UUID
+
+	Offset  int32
+	Limit   int32
+	OrderBy string
+	Sort    string
+}
+
+func (r FetchSessionByParentSessionUUIDRequest) MarshalLogObject(e zapcore.ObjectEncoder) error {
+
+	return nil
+}
+
+type FetchSessionByParentSessionUUIDResponse struct {
+	Results []main_entity.Session
+}
